--- a/Rime/squirrel.custom.yaml
+++ b/Rime/squirrel.custom.yaml
@@ -75,7 +75,7 @@ patch:
     com.runningwithcrayons.Alfred:  # alfred
       ascii_mode: true
     com.microsoft.VSCode:           # Visual Studio Code
-      ascii_mode: true           # 开启中文输入
+      ascii_mode: false           # 开启中文输入
       ascii_punct: true           # 半角符号即中文状态输入英文标点
     com.apple.Terminal:
       ascii_mode: true
