:white_check_mark: 更新配置

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -153,11 +153,11 @@ disable_ligatures never
 
 #: Cursor customization {{{
 
-# cursor #cccccc
+cursor #FF0066
 
 #: Default cursor color
 
-# cursor_text_color #111111
+cursor_text_color #FFFFFF
 
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
@@ -430,7 +430,7 @@ enable_audio_bell no
 #: resizing windows. The cells value is used for horizontal resizing
 #: and the lines value for vertical resizing.
 
-# window_border_width 0.5pt
+window_border_width 0pt
 
 #: The width of window borders. Can be either in pixels (px) or pts
 #: (pt). Values in pts will be rounded to the nearest number of pixels
@@ -632,7 +632,7 @@ inactive_tab_font_style normal
 
 #: The foreground and background colors
 
-background_opacity 0.8
+# background_opacity 0.8
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -651,11 +651,11 @@ background_opacity 0.8
 #: change transparency of windows set dynamic_background_opacity to
 #: yes (this is off by default as it has a performance cost)
 
-# background_image ./bg.png
+background_image /Users/liona/.config/kitty/bg.png
 
 #: Path to a background image. Must be in PNG format.
 
-# background_image_layout tiled
+background_image_layout tile
 
 #: Whether to tile or scale the background image.
 
@@ -670,7 +670,7 @@ background_opacity 0.8
 #: keyboard shortcuts (increase_background_opacity and
 #: decrease_background_opacity) or the remote control facility.
 
-# background_tint 0.0
+background_tint 0.7
 
 #: How much to tint the background image by the background color. The
 #: tint is applied only under the text area, not margin/borders. Makes
@@ -684,12 +684,12 @@ background_opacity 0.8
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
 
-# selection_foreground #000000
+selection_foreground #ff5353
 
 #: The foreground for text selected with the mouse. A value of none
 #: means to leave the color unchanged.
 
-# selection_background #fffacd
+selection_background #fffacd
 
 #: The background for text selected with the mouse.
 
