--- a/nvim/modules/languages.toml
+++ b/nvim/modules/languages.toml
@@ -73,8 +73,9 @@ hook_source = '''
 [[plugins]]
 repo = 'hail2u/vim-css3-syntax'
 on_ft = 'css'
-'''
 
+
+[[plugins]]
 repo = 'groenewege/vim-less'
 on_ft = 'less'
 
@@ -134,3 +135,8 @@ hook_source = '''
 [[plugins]]
 repo = 'iloginow/vim-stylus'
 on_ft = 'stylus'
+
+[[plugins]]
+repo = 'mattn/emmet-vim'
+on_ft = ['html','css']
+
