--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -651,7 +651,7 @@ inactive_tab_font_style normal
 #: change transparency of windows set dynamic_background_opacity to
 #: yes (this is off by default as it has a performance cost)
 
-background_image /Users/liona/.config/kitty/bg.png
+# background_image /Users/liona/.config/kitty/bg.png
 
 #: Path to a background image. Must be in PNG format.
 
