--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -651,20 +651,20 @@ inactive_tab_font_style normal
 #: change transparency of windows set dynamic_background_opacity to
 #: yes (this is off by default as it has a performance cost)
 
-# background_image /Users/liona/.config/kitty/bg.png
+background_image /Users/liona/.config/kitty/bg.png
 
 #: Path to a background image. Must be in PNG format.
 
-background_image_layout tile
+background_image_layout scale
 
 #: Whether to tile or scale the background image.
 
-# background_image_linear no
+background_image_linear no
 
 #: When background image is scaled, whether linear interpolation
 #: should be used.
 
-# dynamic_background_opacity no
+dynamic_background_opacity no
 
 #: Allow changing of the background_opacity dynamically, using either
 #: keyboard shortcuts (increase_background_opacity and
