--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -164,5 +164,6 @@
 		".direnv"
 	],
 	"python.pythonPath": "./venv/bin/python",
-	"rainbow-fart.enabled":true
+	"rainbow-fart.enabled":true,
+	"rainbow-fart.ffplay": "/usr/local/bin/ffplay"
 }
