--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,10 +7,10 @@ include ./theme.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      FiraCode Nerd Font Medium
-bold_font        FiraCode Nerd Font Bold
-italic_font      FiraCode Nerd Font Italic
-bold_italic_font FiraCode Nerd Font BoldItalic
+font_family      Fira Code Medium
+bold_font        Fira Code Bold
+italic_font      Fira Code Italic
+bold_italic_font Fira Code Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -48,7 +48,7 @@ force_ltr yes
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-adjust_line_height  85%
+adjust_line_height  86%
 adjust_column_width 100%
 
 #: Change the size of each character cell kitty renders. You can use
@@ -59,6 +59,7 @@ adjust_column_width 100%
 #: artifacts).
 
 # symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
+symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 FiraCode Nerd Font Bold
 symbol_map U+4E00-U+9FEF Smartisan Compact CNS
 
 #: Map the specified unicode codepoints to a particular font. Useful
@@ -430,7 +431,8 @@ enable_audio_bell no
 #: resizing windows. The cells value is used for horizontal resizing
 #: and the lines value for vertical resizing.
 
-window_border_width 0pt
+# window_border_width 0pt
+window_border_width 0
 
 #: The width of window borders. Can be either in pixels (px) or pts
 #: (pt). Values in pts will be rounded to the nearest number of pixels
@@ -651,7 +653,7 @@ inactive_tab_font_style normal
 #: change transparency of windows set dynamic_background_opacity to
 #: yes (this is off by default as it has a performance cost)
 
-background_image /Users/liona/.config/kitty/bg.png
+# background_image /Users/liona/.config/kitty/bg.png
 
 #: Path to a background image. Must be in PNG format.
 
