:wrench: update configuration

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -48,7 +48,7 @@ force_ltr yes
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-adjust_line_height  86%
+adjust_line_height  100%
 adjust_column_width 100%
 
 #: Change the size of each character cell kitty renders. You can use
@@ -657,22 +657,22 @@ inactive_tab_font_style normal
 
 #: Path to a background image. Must be in PNG format.
 
-background_image_layout scale
+# background_image_layout scale
 
 #: Whether to tile or scale the background image.
 
-background_image_linear no
+# background_image_linear no
 
 #: When background image is scaled, whether linear interpolation
 #: should be used.
 
-dynamic_background_opacity no
+# dynamic_background_opacity no
 
 #: Allow changing of the background_opacity dynamically, using either
 #: keyboard shortcuts (increase_background_opacity and
 #: decrease_background_opacity) or the remote control facility.
 
-background_tint 0.7
+# background_tint 0.7
 
 #: How much to tint the background image by the background color. The
 #: tint is applied only under the text area, not margin/borders. Makes
