--- a/Rime/sync/36911b7b-e7c1-441a-b6ce-954133c0c2c7/luna_pinyin_simp.custom.yaml
+++ b/Rime/sync/36911b7b-e7c1-441a-b6ce-954133c0c2c7/luna_pinyin_simp.custom.yaml
@@ -81,7 +81,7 @@ patch:
   recognizer/patterns/punct: "^/([a-z]+|[0-9]0?)$"
 
 # 模糊拼音
-  #'speller/algebra':
+  speller/algebra:
     #- erase/^xx$/                       # 第一行保留
 
     # 模糊音，需要哪组就刪去行首的 # 号
@@ -114,16 +114,16 @@ patch:
     #- derive/([ei])ng$/$1n/            # eng => en, ing => in
     
   # 智能纠错
-    #- derive/(^[zcs])h([aeiou])ng$/$1hn$2g/   # chnegji = chengji
-    #- derive/ao$/oa/                          # oa = ao
-    #- derive/([iu])a(o|ng?)$/a$1$2/           # aio = iao; aing = iang; aung = uang
-    #- derive/([aeiou])ng$/$1gn/               # gn = ng
-    #- derive/un$/uen/                         # uen = un
-    #- derive/ui$/uei/                         # uei = ui
-    #- derive/iu$/iou/                         # iou = ui
-    #- derive/tie$/tei/                        # tei = tie
-    #- derive/i$/ii/                           # ii = i  # i 不小心按两下
-    #- derive/u$/uu/                           # ui = u  # u 不小心按两下
+    - derive/(^[zcs])h([aeiou])ng$/$1hn$2g/   # chnegji = chengji
+    - derive/ao$/oa/                          # oa = ao
+    - derive/([iu])a(o|ng?)$/a$1$2/           # aio = iao; aing = iang; aung = uang
+    - derive/([aeiou])ng$/$1gn/               # gn = ng
+    - derive/un$/uen/                         # uen = un
+    - derive/ui$/uei/                         # uei = ui
+    - derive/iu$/iou/                         # iou = ui
+    - derive/tie$/tei/                        # tei = tie
+    - derive/i$/ii/                           # ii = i  # i 不小心按两下
+    - derive/u$/uu/                           # ui = u  # u 不小心按两下
 
 # librime-lua 输入动态时间和日期
   "engine/translators/@6": lua_translator@date_translator
