--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -36,9 +36,9 @@
 	},
 	//diagnostic
 	"diagnostic.signOffset": 9999999,
-	"diagnostic.errorSign": " ",
-	"diagnostic.warningSign": " ",
-	"diagnostic.infoSign": " ",
+	"diagnostic.errorSign": " ",
+	"diagnostic.warningSign": " ",
+	"diagnostic.infoSign": " ",
 	"diagnostic.displayByAle": false,
 	"diagnostic.refreshOnInsertMode": true,
 	//git
@@ -54,7 +54,7 @@
 	"git.changeRemovedSign.hlGroup": "GitGutterChangeDelete",
 	"git.addedSign.text": " ",
 	"git.changedSign.text": " ",
-	"git.removedSign.text": " ",
+	"git.removedSign.text": " ",
 	"git.topRemovedSign.text": " ",
 	"git.changeRemovedSign.text": "﫧",
 	//Snippet
@@ -175,9 +175,9 @@
 		"./venv"
 	],
 	"python.formatting.provider": "yapf",
-	"python.formatting.yapfPath": "/usr/local/bin/yapf",
+	"python.formatting.yapfPath": "./venv/bin/yapf",
 	"python.linting.pylintEnabled": true,
-	"python.linting.pylintPath": "/usr/local/bin/pylint",
+	"python.linting.pylintPath": "./venv/bin/pylint",
 	"rainbow-fart.enabled":true,
 	"rainbow-fart.ffplay": "/usr/local/bin/ffplay"
 }
