--- a/nvim/modules/appearance.toml
+++ b/nvim/modules/appearance.toml
@@ -24,6 +24,9 @@ repo = 'lifepillar/vim-gruvbox8'
 repo = 'joshdick/onedark.vim'
 
 [[plugins]]
+repo = 'folke/tokyonight.nvim'
+
+[[plugins]]
 repo = 'hardcoreplayers/dashboard-nvim'
 hook_source = '''
 	let g:dashboard_custom_header = [
@@ -47,8 +50,8 @@ hook_source = '''
 repo = 'bagrat/vim-buffet'
 on_event = ['BufReadPre','BufNewFile']
 
-[[plugins]]
-repo = 'hardcoreplayers/spaceline.vim'
-hook_source = '''
-	let g:spaceline_seperate_style= 'slant'
+ [[plugins]]
+ repo = 'hardcoreplayers/spaceline.vim'
+ hook_source = '''
+	let g:spaceline_seperate_style= 'curve'
 '''
