--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -55,7 +55,7 @@
 	"git.addedSign.text": " ",
 	"git.changedSign.text": " ",
 	"git.removedSign.text": " ",
-	"git.topRemovedSign.text": " ",
+	"git.topRemovedSign.text": "  ",
 	"git.changeRemovedSign.text": "﫧",
 	//Snippet
 	"coc.preferences.snippetStatusText": "Ⓢ ",
@@ -125,39 +125,38 @@
 	"cSpell.fixSpellingWithRenameProvider": true,
 	"cSpell.showStatus": false,
 	"cSpell.enabledLanguageIds": [
-		"asciidoc",
-		"c",
-		"cpp",
-		"csharp",
-		"css",
-		"git-commit",
-		"gitcommit",
-		"go",
-		"haskell",
-		"html",
-		"java",
-		"javascript",
-		"javascriptreact",
-		"json",
-		"jsonc",
-		"latex",
-		"less",
-		"markdown",
-		"php",
-		"plaintext",
-		"python",
-		"pug",
-		"restructuredtext",
-		"rust",
-		"scala",
-		"scss",
-		"text",
-		"typescript",
-		"typescriptreact",
-		"yaml",
-		"yml",
-		"vim"
-	],
+    "asciidoc",
+    "c",
+    "cpp",
+    "csharp",
+    "css",
+    "git-commit",
+    "gitcommit",
+    "go",
+    "haskell",
+    "html",
+    "java",
+    "javascript",
+    "javascriptreact",
+    "json",
+    "jsonc",
+    "latex",
+    "less",
+    "markdown",
+    "php",
+    "plaintext",
+    "pug",
+    "python",
+    "restructuredtext",
+    "rust",
+    "scala",
+    "scss",
+    "text",
+    "typescript",
+    "typescriptreact",
+    "yaml",
+    "yml"
+  ],
 	"cSpell.words": ["venv","pyenv","pylint","yapf","ffplay","ffmpeg","ans","liona","maskros"],
 	"cSpell.ignorePaths": [
         "node_modules",
