--- a/aria2/rclone.env
+++ b/aria2/rclone.env
@@ -1,13 +1,11 @@
 #
-# Copyright (c) 2018-2020 P3TERX <https://p3terx.com>
-#
-# This is free software, licensed under the MIT License.
-# See /LICENSE for more information.
-#
 # https://github.com/P3TERX/aria2.conf
 # File name：rclone.env
-# Description: Rclone environment variables file
+# Description: RCLONE environment variables file
 # Version: 2020.11.26
+#
+# For more information on RCLONE environment variables：
+# https://rclone.org/docs/#environment-variables
 #
 
 # RCLONE 配置文件路径
@@ -41,6 +39,3 @@ RCLONE_RETRIES_SLEEP=10s
 # RCLONE 代理设置
 #HTTP_PROXY=localhost:1080
 #HTTPS_PROXY=$HTTP_PROXY
-
-# More details
-# https://rclone.org/docs/#environment-variables
