--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -1,13 +1,13 @@
 #
-# Copyright (c) 2018-2020 P3TERX <https://p3terx.com>
-#
-# This is free software, licensed under the MIT License.
-# See /LICENSE for more information.
-#
 # https://github.com/P3TERX/aria2.conf
 # File name：aria2.conf
 # Description: Awesome Aria2 configuration file
-# Version: 2020.12.28
+# Version: 2021.09.15
+#
+# Copyright (c) 2018-2021 P3TERX <https://p3terx.com>
+#
+# This is free software, licensed under the MIT License.
+# See /LICENSE for more information.
 #
 
 ## 文件保存设置 ##
@@ -280,14 +280,14 @@ bt-detach-seed-only=true
 ## 客户端伪装 ##
 
 # 自定义 User Agent
-user-agent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.88 Safari/537.36 Edg/87.0.664.57
+user-agent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/93.0.4577.63 Safari/537.36 Edg/93.0.961.47
 
 # BT 客户端伪装
 # PT 下载需要保持 user-agent 和 peer-agent 两个参数一致
 # 部分 PT 站对 Aria2 有特殊封禁机制，客户端伪装不一定有效，且有封禁账号的风险。
-#user-agent=Transmission 2.94
-peer-agent=Transmission 2.94
-peer-id-prefix=-TR2940-
+#user-agent=Deluge 1.3.15
+peer-agent=Deluge 1.3.15
+peer-id-prefix=-DE13F0-
 
 
 ## 执行额外命令 ##
@@ -340,10 +340,10 @@ rpc-max-request-size=10M
 #rpc-secure=false
 
 # 在 RPC 服务中启用 SSL/TLS 加密时的证书文件(.pem/.crt)
-#rpc-certificate=/root/.aria2/xxx.pem
+#rpc-certificate=/Users/liona/.aria2/xxx.pem
 
 # 在 RPC 服务中启用 SSL/TLS 加密时的私钥文件(.key)
-#rpc-private-key=/root/.aria2/xxx.key
+#rpc-private-key=/Users/liona/.aria2/xxx.key
 
 # 事件轮询方式, 可选：epoll, kqueue, port, poll, select, 不同系统默认值不同
 #event-poll=select
@@ -407,4 +407,4 @@ summary-interval=0
 
 
 ## BitTorrent trackers ##
-bt-tracker=
+bt-tracker=http://1337.abcvg.info:80/announce,http://bt.okmp3.ru:2710/announce,http://mediaclub.tv:80/announce.php,http://milanesitracker.tekcities.com:80/announce,http://nyaa.tracker.wf:7777/announce,http://open.acgnxtracker.com:80/announce,http://open.tracker.ink:6969/announce,http://opentracker.xyz:80/announce,http://share.camoe.cn:8080/announce,http://t.nyaatracker.com:80/announce,http://tr.cili001.com:8070/announce,http://tracker.bt4g.com:2095/announce,http://tracker.files.fm:6969/announce,http://tracker.gbitt.info:80/announce,http://tracker.hiyj.cn:80/announce,http://tracker.ipv6tracker.ru:80/announce,http://tracker.mywaifu.best:6969/announce,http://tracker.openbittorrent.com:80/announce,http://tracker.skyts.net:6969/announce,http://tracker.sushirave.net:80/announce,http://tracker.swarm3.network:6969/announce,http://vps02.net.orel.ru:80/announce,https://carbon-bonsai-621.appspot.com:443/announce,https://chihaya-heroku.120181311.xyz:443/announce,https://opentracker.i2p.rocks:443/announce,https://tp.m-team.cc:443/announce.php,https://tr.ready4.icu:443/announce,https://tracker.imgoingto.icu:443/announce,https://tracker.iriseden.fr:443/announce,https://tracker.kuroy.me:443/announce,https://tracker.lilithraws.org:443/announce,https://tracker.nanoha.org:443/announce,https://tracker.nitrix.me:443/announce,https://trackme.theom.nz:443/announce,udp://6ahddutb1ucc3cp.ru:6969/announce,udp://9.rarbg.com:2810/announce,udp://abufinzio.monocul.us:6969/announce,udp://bt1.archive.org:6969/announce,udp://engplus.ru:6969/announce,udp://exodus.desync.com:6969/announce,udp://fe.dealclub.de:6969/announce,udp://ipv4.tracker.harry.lu:80/announce,udp://ipv6.tracker.monitorit4.me:6969/announce,udp://mirror.aptus.co.tz:6969/announce,udp://movies.zsw.ca:6969/announce,udp://open.demonii.com:1337/announce,udp://open.stealth.si:80/announce,udp://open.tracker.cl:1337/announce,udp://open.tracker.ink:6969/announce,udp://opentor.org:2710/announce,udp://p4p.arenabg.com:1337/announce,udp://run.publictracker.xyz:6969/announce,udp://thetracker.org:80/announce,udp://torrentclub.space:6969/announce,udp://tracker.0x.tf:6969/announce,udp://tracker.altrosky.nl:6969/announce,udp://tracker.auctor.tv:6969/announce,udp://tracker.beeimg.com:6969/announce,udp://tracker.birkenwald.de:6969/announce,udp://tracker.bitsearch.to:1337/announce,udp://tracker.cyberia.is:6969/announce,udp://tracker.dler.com:6969/announce,udp://tracker.dler.org:6969/announce,udp://tracker.doko.moe:6969/announce,udp://tracker.filemail.com:6969/announce,udp://tracker.jordan.im:6969/announce,udp://tracker.lelux.fi:6969/announce,udp://tracker.moeking.me:6969/announce,udp://tracker.monitorit4.me:6969/announce,udp://tracker.opentrackr.org:1337/announce,udp://tracker.pomf.se:80/announce,udp://tracker.skyts.net:6969/announce,udp://tracker.srv00.com:6969/announce,udp://tracker.swarm3.network:6969/announce,udp://tracker.sylphix.com:6969/announce,udp://tracker.theoks.net:6969/announce,udp://tracker.tiny-vps.com:6969/announce,udp://tracker.torrent.eu.org:451/announce,udp://tracker.zerobytes.xyz:1337/announce,udp://tracker1.bt.moack.co.kr:80/announce,udp://tracker2.dler.com:80/announce,udp://tracker6.lelux.fi:6969/announce,udp://u4.trakx.crim.ist:1337/announce,udp://www.torrent.eu.org:451/announce,ws://hub.bugout.link:80/announce,wss://tracker.openwebtorrent.com:443/announce
