--- a/aria2/script.conf
+++ b/aria2/script.conf
@@ -1,13 +1,8 @@
 #
-# Copyright (c) 2018-2020 P3TERX <https://p3terx.com>
-#
-# This is free software, licensed under the MIT License.
-# See /LICENSE for more information.
-#
 # https://github.com/P3TERX/aria2.conf
 # File name：script.conf
 # Description: Aria2 additional function script configuration file
-# Version: 2020.08.08
+# Version: 2021.07.04
 #
 
 ## 文件上传设置(upload.sh) ##
@@ -72,3 +67,10 @@ delete-empty-dir=true
 
 # 排除文件类型。排除的文件类型将在下载完成后被删除。
 #exclude-file=html|url|lnk|txt|jpg|png
+
+# 保留文件(正则表达式)。其它文件类型将在下载完成后被删除。
+#include-file-regex=
+
+# 排除文件(正则表达式)。排除的文件类型将在下载完成后被删除。
+# 示例为排除比特彗星的 padding file
+#exclude-file-regex="(.*/)_+(padding)(_*)(file)(.*)(_+)"
