--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,6 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
-include ./theme.conf
+include ./kitty-themes/ayu.conf
+#include ./kitty-themes/PencilLight.conf
 
 #: Fonts {{{
 
