--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -464,6 +464,7 @@ map gr cd /
 map gR eval fm.cd(ranger.RANGERDIR)
 map g/ cd /
 map g? cd /usr/share/doc/ranger
+map gw cd /Users/liona/Workspace/
 
 # External Programs
 map E  edit
