--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -100,7 +100,7 @@ name ^[mM]akefile$            = make
 #--------------------------------------------
 # Scripts
 #-------------------------------------------
-ext py  = python -- "$1"
+ext py  = python3 -- "$1"
 ext pl  = perl -- "$1"
 ext rb  = ruby -- "$1"
 ext js  = node -- "$1"
