--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -60,7 +60,7 @@ adjust_column_width 100%
 #: artifacts).
 
 # symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
-symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 FiraCode Nerd Font Bold
+symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 FiraCode Nerd Font
 symbol_map U+4E00-U+9FEF Smartisan Compact CNS
 
 #: Map the specified unicode codepoints to a particular font. Useful
