--- a/nvim_old/modules/completion.toml
+++ b/nvim_old/modules/completion.toml
@@ -44,15 +44,15 @@ hook_add = '''
 
     " Highlight symbol under cursor on CursorHold
     autocmd CursorHold * silent call CocActionAsync('highlight')
-
-    "Use tab for trigger completion with characters ahead and navigate
-    inoremap <silent><expr> <TAB>
-          \ pumvisible() ? "\<C-n>" :
-          \ <SID>check_back_space() ? "\<TAB>" :
-          \ coc#refresh()
-
-    inoremap <expr><S-TAB> pumvisible() ? "\<C-p>" : "\<C-h>"
-    inoremap <silent><expr> <cr> pumvisible() ? coc#_select_confirm() : "\<C-g>u\<CR>\<c-r>=coc#on_enter()\<CR>"
+		inoremap <silent><expr> <CR> coc#pum#visible() ? coc#pum#confirm() : "\<C-g>u\<CR>\<c-r>=coc#on_enter()\<CR>"
+		inoremap <silent><expr> <C-x><C-z> coc#pum#visible() ? coc#pum#stop() : "\<C-x>\<C-z>"
+		" remap for complete to use tab and <cr>
+		inoremap <silent><expr> <TAB>
+					\ coc#pum#visible() ? coc#pum#next(1):
+					\ <SID>check_back_space() ? "\<Tab>" :
+					\ coc#refresh()
+		inoremap <expr><S-TAB> coc#pum#visible() ? coc#pum#prev(1) : "\<C-h>"
+		inoremap <silent><expr> <c-space> coc#refresh()
 
     function! s:check_back_space() abort
       let col = col('.') - 1
