--- a/nvim_old/modules/program.toml
+++ b/nvim_old/modules/program.toml
@@ -43,7 +43,7 @@ if = 'executable("ctags")'
 on_event = ['BufReadPost', 'BufWritePost']
 hook_source = '''
     let g:gutentags_cache_dir = $DATA_PATH . '/tags'
-    let g:gutentags_project_root = ['.root', '.git', '.svn', '.hg', '.project','go.mod','/usr/local']
+    let g:gutentags_project_root = ['.root', '.git', '.svn', '.hg', '.project','go.mod']
     let g:gutentags_generate_on_write = 1
     let g:gutentags_generate_on_missing = 1
     let g:gutentags_generate_on_new = 0
