--- a/nvim/modules/program.toml
+++ b/nvim/modules/program.toml
@@ -42,7 +42,8 @@ repo = 'ludovicchabant/vim-gutentags'
 if = 'executable("ctags")'
 on_event = ['BufReadPost', 'BufWritePost']
 hook_source = '''
-    let g:gutentags_cache_dir = $DATA_PATH . '/tags'
+		let g:gutentags_ctags_executable='/opt/homebrew/bin/ctags'
+    let g:gutentags_cache_dir = '/tmp/tags'
     let g:gutentags_project_root = ['.root', '.git', '.svn', '.hg', '.project','go.mod']
     let g:gutentags_generate_on_write = 1
     let g:gutentags_generate_on_missing = 1
