--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,7 +1,5 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
-# include ./kitty-themes/ayu.conf
-include ./kitty-themes/Dracula.conf
-#include ./kitty-themes/PencilLight.conf
+include ./kitty-themes/lovelace.conf
 
 #: Fonts {{{
 
@@ -61,7 +59,7 @@ adjust_column_width 100%
 #: artifacts).
 
 # symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
-symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 FiraCode Nerd Font
+symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 FiraCode NF
 symbol_map U+4E00-U+9FEF Smartisan Compact CNS
 
 #: Map the specified unicode codepoints to a particular font. Useful
