--- a/nvim/modules/completion.toml
+++ b/nvim/modules/completion.toml
@@ -22,12 +22,15 @@ hook_add = '''
 		\ 'coc-yank',
 		\ 'coc-actions',
 		\ 'coc-db',
+		\ 'coc-sh',
 		\ 'coc-spell-checker',
 		\ 'coc-vimlsp',
 		\ 'coc-explorer',
 		\ 'coc-style-helper',
 		\ 'coc-react-refactor',
 		\ 'coc-css',
+		\ 'coc-tsserver',
+		\ 'coc-go',
 		\ 'coc-vetur',
 		\ 'coc-pyright',
 		\ 'coc-html',
