--- a/Rime/squirrel.custom.yaml
+++ b/Rime/squirrel.custom.yaml
@@ -328,7 +328,7 @@ patch:
       comment_text_color: 0x6D6D6D             # 拼音等提示文字颜色
       hilited_comment_text_color: 0xEBC6B0     # 注解文字高亮
       hilited_candidate_label_color: 0xfafafa  # 第一候选项编号颜色
-      
+
     milan:
       name: 米兰
       horizontal: false              # true横排，false竖排
@@ -336,7 +336,7 @@ patch:
       font_point: 16                           # 候选文字大小
       label_font_point: 14                     # 候选编号大小
       line_spacing: 8                          # 行间距
-      line_spacing: 10                         # 行间距(适用于竖排)
+      # line_spacing: 10                         # 行间距(适用于竖排)
       border_height: 4                             # 窗口上下高度，大于圆角半径才生效
       border_width: 4                              # 窗口左右宽度，大于圆角半径才生效
       corner_radius: 5                         # 窗口圆角
@@ -441,15 +441,7 @@ patch:
         ascii_mode: true             # true默认英文,false默认中文
     com.runningwithcrayons.Alfred:   # alfred
         ascii_mode: true
-    com.apple.Terminal:              # 终端
-        ascii_mode: true
-    com.microsoft.VSCode:            # Visual Studio Code
-        ascii_mode: true
-        # ascii_punct: true            # 中文状态输出英文标点(半角) 
-        inline: true
     com.tencent.Lemon:               # 腾讯柠檬
-        ascii_mode: true
-    com.apple.dt.Xcode:              # Xcode
         ascii_mode: true
     com.nektony.App-Cleaner-SII:     # App Cleaner & Uninstaller
         ascii_mode: true
