--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,107 +1,100 @@
 /* cSpell:disable */
 {
-	"suggest.triggerAfterInsertEnter": false,
-	"suggest.timeout": 500,
-	"suggest.noselect": false,
-	"suggest.detailField": "abbr",
-	"suggest.snippetIndicator": " ",
-	"suggest.triggerCompletionWait": 100,
-	"suggest.echodocSupport": true,
-	"suggest.completionItemKindLabels": {
-		"keyword": "\uf1de",
-		"variable": "\ue79b",
-		"value": "\uf89f",
-		"operator": "\u03a8",
-		"function": "\u0192",
-		"reference": "\ufa46",
-		"constant": "\uf8fe",
-		"method": "\uf09a",
-		"struct": "\ufb44",
-		"class": "\uf0e8",
-		"interface": "\uf417",
-		"text": "\ue612",
-		"enum": "\uf435",
-		"enumMember": "\uf02b",
-		"module": "\uf40d",
-		"color": "\ue22b",
-		"property": "\ue624",
-		"field": "\uf9be",
-		"unit": "\uf475",
-		"event": "\ufacd",
-		"file": "\uf15c",
-		"folder": "\uf114",
-		"snippet": "\ue60b",
-		"typeParameter": "\uf728",
-		"default": "\uf29c"
-	},
-	//diagnostic
-	"diagnostic.errorSign": " ",
-	"diagnostic.warningSign": " ",
-	"diagnostic.infoSign": " ",
-	"diagnostic.displayByAle": false,
-	"diagnostic.refreshOnInsertMode": true,
-	//git
-	"git.enableGutters": true,
-	"git.branchCharacter": "\uf418",
-	"git.addGBlameToBufferVar": true,
-	"git.addGBlameToVirtualText": true,
-	"git.virtualTextPrefix": " ",
-	"git.addedSign.hlGroup": "GitGutterAdd",
-	"git.changedSign.hlGroup": "GitGutterChange",
-	"git.removedSign.hlGroup": "GitGutterDelete",
-	"git.topRemovedSign.hlGroup": "GitGutterDelete",
-	"git.changeRemovedSign.hlGroup": "GitGutterChangeDelete",
-	"git.addedSign.text": " ",
-	"git.changedSign.text": " ",
-	"git.removedSign.text": " ",
-	"git.topRemovedSign.text": "  ",
-	"git.changeRemovedSign.text": "﫧",
-	//Snippet
-	"coc.preferences.snippetStatusText": "Ⓢ ",
-	//CocList
-	"list.source.files.defaultOptions": [
-		"--auto-preview"
-	],
-	"list.source.outline.defaultOptions": [
-		"--auto-preview"
-	],
-	//prettier
-	"coc.preferences.formatOnSaveFiletypes": [
-		"html",
-		"css",
-		"markdown",
-		"javascript",
-		"javascriptreact",
-		"typescript",
-		"typescriptreact",
-		"go",
-		"c",
-		"cpp",
-		"vue",
-		"python",
-		"json"
-	],
-	//multiple curssor
-	"cursors.nextKey": "<C-n>",
-	"cursors.previousKey": "<C-p>",
-	"cursors.cancelKey": "<esc>",
-	//sessions
-	"session.directory": "~/.cache/vim/session",
-	// coc-explorer
-	"explorer.icon.expanded": " ",
-	"explorer.icon.collapsed": " ",
-	"explorer.width": 30,
-	"explorer.icon.enableNerdfont": true,
-	"explorer.quitOnOpen": true,
-	"explorer.floating.width": -20,
-	"explorer.floating.height": -10,
-	"explorer.openAction.strategy": "sourceWindow",
-	// coc-actions
-	"coc-actions.hideCursor": false,
-	// Cspell
-	"cSpell.fixSpellingWithRenameProvider": true,
-	"cSpell.showStatus": false,
-	"cSpell.enabledLanguageIds": [
+  "suggest.triggerAfterInsertEnter": false,
+  "suggest.timeout": 500,
+  "suggest.noselect": false,
+  "suggest.detailField": "abbr",
+  "suggest.snippetIndicator": " ",
+  "suggest.triggerCompletionWait": 50,
+  "suggest.completionItemKindLabels": {
+    "keyword": "\uf1de",
+    "variable": "\ue79b",
+    "value": "\uf89f",
+    "operator": "\u03a8",
+    "function": "\u0192",
+    "reference": "\ufa46",
+    "constant": "\uf8fe",
+    "method": "\uf09a",
+    "struct": "\ufb44",
+    "class": "\uf0e8",
+    "interface": "\uf417",
+    "text": "\ue612",
+    "enum": "\uf435",
+    "enumMember": "\uf02b",
+    "module": "\uf40d",
+    "color": "\ue22b",
+    "property": "\ue624",
+    "field": "\uf9be",
+    "unit": "\uf475",
+    "event": "\ufacd",
+    "file": "\uf15c",
+    "folder": "\uf114",
+    "snippet": "\ue60b",
+    "typeParameter": "\uf728",
+    "default": "\uf29c"
+  },
+  //diagnostic
+  "diagnostic.errorSign": " ",
+  "diagnostic.warningSign": " ",
+  "diagnostic.infoSign": " ",
+  "diagnostic.displayByAle": false,
+  "diagnostic.refreshOnInsertMode": true,
+  //git
+  "git.enableGutters": true,
+  "git.branchCharacter": "\uf418",
+  "git.addGBlameToBufferVar": true,
+  "git.addGBlameToVirtualText": true,
+  "git.virtualTextPrefix": " ",
+  "git.addedSign.hlGroup": "GitGutterAdd",
+  "git.changedSign.hlGroup": "GitGutterChange",
+  "git.removedSign.hlGroup": "GitGutterDelete",
+  "git.topRemovedSign.hlGroup": "GitGutterDelete",
+  "git.changeRemovedSign.hlGroup": "GitGutterChangeDelete",
+  "git.addedSign.text": " ",
+  "git.changedSign.text": " ",
+  "git.removedSign.text": " ",
+  "git.topRemovedSign.text": "  ",
+  "git.changeRemovedSign.text": "﫧",
+  //CocList
+  "list.source.files.defaultOptions": ["--auto-preview"],
+  "list.source.outline.defaultOptions": ["--auto-preview"],
+  //prettier
+  "coc.preferences.formatOnSaveFiletypes": [
+    "html",
+    "css",
+    "markdown",
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact",
+    "go",
+    "c",
+    "cpp",
+    "vue",
+    "python",
+    "json"
+  ],
+  //multiple curssor
+  "cursors.nextKey": "<C-n>",
+  "cursors.previousKey": "<C-p>",
+  "cursors.cancelKey": "<esc>",
+  //sessions
+  "session.directory": "~/.cache/vim/session",
+  // coc-explorer
+  "explorer.icon.expanded": " ",
+  "explorer.icon.collapsed": " ",
+  "explorer.width": 30,
+  "explorer.icon.enableNerdfont": true,
+  "explorer.quitOnOpen": true,
+  "explorer.floating.width": -20,
+  "explorer.floating.height": -10,
+  "explorer.openAction.strategy": "sourceWindow",
+  // coc-actions
+  "coc-actions.hideCursor": false,
+  // Cspell
+  "cSpell.fixSpellingWithRenameProvider": true,
+  "cSpell.showStatus": false,
+  "cSpell.enabledLanguageIds": [
     "asciidoc",
     "c",
     "cpp",
@@ -134,26 +127,36 @@
     "yaml",
     "yml"
   ],
-	"cSpell.words": ["venv","pyenv","pylint","yapf","ffplay","ffmpeg","ans","liona","maskros"],
-	"cSpell.ignorePaths": [
-        "node_modules",
-        "**/node_modules",
-        "**/node_modules/**",
-        "node_modules/**",
-        "vscode-extension",
-        ".git",
-        "*.dll",
-        "**/*.dll",
-				"venv"
+  "cSpell.words": [
+    "venv",
+    "pyenv",
+    "pylint",
+    "yapf",
+    "ffplay",
+    "ffmpeg",
+    "ans",
+    "liona",
+    "maskros"
   ],
-	"python.venvPath": "./venv/",
-	"python.pythonPath": "./venv/bin/python",
-	"python.formatting.provider": "yapf",
-	"python.formatting.yapfPath": "/Users/liona/.local/bin/yapf",
-	"python.linting.pylintEnabled": true,
-	"python.linting.pylintPath": "/Users/liona/.local/bin/pylint",
-	"python.sortImports.path": "/Users/liona/.local/bin/isort",
-	"pyright.organizeimports.provider": "isort",
-	"rainbow-fart.enabled":true,
-	"rainbow-fart.ffplay": "/opt/homebrew/bin/ffplay"
+  "cSpell.ignorePaths": [
+    "node_modules",
+    "**/node_modules",
+    "**/node_modules/**",
+    "node_modules/**",
+    "vscode-extension",
+    ".git",
+    "*.dll",
+    "**/*.dll",
+    "venv"
+  ],
+  "python.venvPath": "./venv/",
+  "python.pythonPath": "./venv/bin/python",
+  "python.formatting.provider": "yapf",
+  "python.formatting.yapfPath": "/Users/liona/.local/bin/yapf",
+  "python.linting.pylintEnabled": true,
+  "python.linting.pylintPath": "/Users/liona/.local/bin/pylint",
+  "python.sortImports.path": "/Users/liona/.local/bin/isort",
+  "pyright.organizeimports.provider": "isort",
+  "rainbow-fart.enabled": true,
+  "rainbow-fart.ffplay": "/opt/homebrew/bin/ffplay"
 }
