--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -6,6 +6,7 @@
   "suggest.detailField": "abbr",
   "suggest.snippetIndicator": "  ",
   "suggest.triggerCompletionWait": 50,
+  "suggest.maxCompleteItemCount": 10,
   "suggest.completionItemKindLabels": {
     "keyword": "\uf1de",
     "variable": "\ue79b",
@@ -33,6 +34,20 @@
     "typeParameter": "\uf728",
     "default": "\uf29c"
   },
+  "suggest.enableFloat": true,
+  "suggest.floatConfig": {
+    "border": true,
+    "rounded": true,
+    "winblend": 15
+  },
+  "hover.floatConfig": {
+    "border": true,
+    "rounded": true,
+    "winblend": 15
+  },
+  // Windows style
+  "notification.border": true,
+  "notification.winblend": 40,
   //diagnostic
   "diagnostic.errorSign": " ",
   "diagnostic.warningSign": " ",
@@ -41,6 +56,11 @@
   "diagnostic.virtualTextPrefix": " ",
   "diagnostic.displayByAle": false,
   "diagnostic.refreshOnInsertMode": true,
+  "diagnostic.floatConfig": {
+    "border": true,
+    "rounded": true,
+    "winblend": 15
+  },
   //git
   "git.enableGutters": true,
   "git.branchCharacter": "שׂ ",
@@ -76,7 +96,6 @@
     "go",
     "c",
     "cpp",
-    "vue",
     "python",
     "json",
     "vue"
@@ -88,14 +107,26 @@
   //sessions
   "session.directory": "~/.cache/vim/session",
   // coc-explorer
-  "explorer.icon.expanded": " ",
-  "explorer.icon.collapsed": " ",
+  "explorer.icon.expanded": " ",
+  "explorer.icon.collapsed": " ",
   "explorer.width": 30,
   "explorer.icon.enableNerdfont": true,
   "explorer.quitOnOpen": true,
   "explorer.floating.width": -20,
   "explorer.floating.height": -10,
+  "explorer.floating.border.title": " Find files",
+  "explorer.floating.border.chars": [
+    "─",
+    "│",
+    "─",
+    "│",
+    "╭",
+    "╮",
+    "╯",
+    "╰"
+  ],
   "explorer.openAction.strategy": "sourceWindow",
+  "explorer.git.showIgnored": false,
   // coc-actions
   "coc-actions.hideCursor": false,
   // Cspell
