--- a/Rime/squirrel.custom.yaml
+++ b/Rime/squirrel.custom.yaml
@@ -43,11 +43,12 @@ patch:
       label_color: 0x000000                   # 预选栏编号颜色
       horizontal: true                        # 水平排列
       inline_preedit: true                    # 单行显示，false双行显示
-      # candidate_format: "\uf444 %@ \u2005"   # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间的。
-      candidate_format: "%c %@ "   # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间的。
-      font_face: "LXGW WenKai"      # 候选词字体
+      # candidate_format: "\uf444 %@ \u2005"  # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间的。
+      candidate_format: "%c %@ "              # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间的。
+      font_face: "LXGW WenKai Bold"           # 候选词字体
+      # font_face: "Smartisan Compact CNS Medium"      # 候选词字体
       font_point: 15                          # 候选文字大小
-      label_font_face: "FiraCode Nerd Font" # 候选词编号字体
+      label_font_face: "FiraCode Nerd Font"   # 候选词编号字体
       label_font_point: 13                    # 候选编号大小
       corner_radius: 6                        # 候选条圆角
       hilited_corner_radius: 5                # 高亮圆角
@@ -72,12 +73,12 @@ patch:
       label_color: 0xFFFFFF                   # 预选栏编号颜色
       horizontal: true                        # 水平排列
       inline_preedit: true                    # 单行显示，false双行显示
-      # candidate_format: "\uf444 %@ \u2005"   # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间的。
-      candidate_format: "%c %@ "   # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间的。
-        # font_face: "Smartisan Compact CNS"      # 候选词字体
-      font_face: "LXGW WenKai"      # 候选词字体
+      # candidate_format: "\uf444 %@ \u2005"  # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间的。
+      candidate_format: "%c %@ "              # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间的。
+      # font_face: "Smartisan Compact CNS"    # 候选词字体
+      font_face: "LXGW WenKai"                # 候选词字体
       font_point: 15                          # 候选文字大小
-      label_font_face: "FiraCode Nerd Font" # 候选词编号字体
+      label_font_face: "FiraCode Nerd Font"   # 候选词编号字体
       label_font_point: 15                    # 候选编号大小
       corner_radius: 6                        # 候选条圆角
       hilited_corner_radius: 0                # 高亮圆角
