--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -159,7 +159,7 @@ listen-port=51413
 dht-listen-port=51413
 
 # 启用 IPv4 DHT 功能, PT 下载(私有种子)会自动禁用, 默认:true
-enable-dht=true
+enable-dht=false
 
 # 启用 IPv6 DHT 功能, PT 下载(私有种子)会自动禁用，默认:false
 # 在没有 IPv6 支持的环境开启可能会导致 DHT 功能异常
@@ -212,7 +212,7 @@ max-upload-limit=0
 
 # 最小分享率。当种子的分享率达到此选项设置的值时停止做种, 0 为一直做种, 默认:1.0
 # 强烈建议您将此选项设置为大于等于 1.0
-seed-ratio=1.0
+seed-ratio=2.0
 
 # 最小做种时间（分钟）。设置为 0 时将在 BT 任务下载完成后停止做种。
 seed-time=0
@@ -286,8 +286,8 @@ user-agent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, 
 # PT 下载需要保持 user-agent 和 peer-agent 两个参数一致
 # 部分 PT 站对 Aria2 有特殊封禁机制，客户端伪装不一定有效，且有封禁账号的风险。
 #user-agent=Deluge 1.3.15
-peer-agent=Deluge 1.3.15
-peer-id-prefix=-DE13F0-
+peer-agent=Transmission/2.94
+peer-id-prefix=-TR2940-
 
 
 ## 执行额外命令 ##
