--- a/Rime/squirrel.custom.yaml
+++ b/Rime/squirrel.custom.yaml
@@ -45,8 +45,9 @@ patch:
       inline_preedit: true                    # 单行显示，false双行显示
       # candidate_format: "\uf444 %@ \u2005"  # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间的。
       candidate_format: "%c %@ "              # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间的。
-      font_face: "LXGW WenKai Bold"           # 候选词字体
       # font_face: "Smartisan Compact CNS Medium"      # 候选词字体
+      # font_face: "LXGW WenKai Bold"         # 候选词字体
+      font_face: "TsangerJinKai05 W04"        # 候选词字体
       font_point: 15                          # 候选文字大小
       label_font_face: "FiraCode Nerd Font"   # 候选词编号字体
       label_font_point: 13                    # 候选编号大小
@@ -76,7 +77,8 @@ patch:
       # candidate_format: "\uf444 %@ \u2005"  # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间的。
       candidate_format: "%c %@ "              # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间的。
       # font_face: "Smartisan Compact CNS"    # 候选词字体
-      font_face: "LXGW WenKai"                # 候选词字体
+      # font_face: "LXGW WenKai"              # 候选词字体
+      font_face: "TsangerJinKai05 W04"        # 候选词字体
       font_point: 15                          # 候选文字大小
       label_font_face: "FiraCode Nerd Font"   # 候选词编号字体
       label_font_point: 15                    # 候选编号大小
