--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -538,7 +538,7 @@ window_border_width 0
 #: when resizing the OS window. Note that this does not currently work
 #: on Wayland.
 
-# confirm_os_window_close 0
+confirm_os_window_close 0
 
 #: Ask for confirmation when closing an OS window or a tab that has at
 #: least this number of kitty windows in it. A value of zero disables
@@ -917,7 +917,7 @@ term xterm
 
 #: Hide the kitty window from running tasks (Option+Tab) on macOS.
 
-# macos_quit_when_last_window_closed no
+macos_quit_when_last_window_closed yes
 
 #: Have kitty quit when all the top-level windows are closed. By
 #: default, kitty will stay running, even with no open windows, as is
