--- a/Rime/installation.yaml
+++ b/Rime/installation.yaml
@@ -1,7 +1,8 @@
 distribution_code_name: Squirrel
 distribution_name: "鼠鬚管"
-distribution_version: 0.15.2
+distribution_version: 0.16.2
 install_time: "Tue Aug 30 23:52:36 2022"
-installation_id: "Mac"
+installation_id: Mac
+rime_version: 1.8.5
 sync_dir: "/Users/liona/Library/Mobile Documents/com~apple~CloudDocs/RimeSync"
-rime_version: 1.7.3
+update_time: "Mon Feb  6 22:00:54 2023"
