--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -302,7 +302,7 @@ on-download-complete=/Users/liona/.aria2/clean.sh
 
 # 下载错误后执行的命令
 # 此项未定义则执行 下载停止后执行的命令 (on-download-stop)
-#on-download-error=
+on-download-error=/Users/liona/.aria2/delete.sh
 
 # 下载暂停后执行的命令
 #on-download-pause=
