--- a/Rime/squirrel.custom.yaml
+++ b/Rime/squirrel.custom.yaml
@@ -450,6 +450,7 @@ patch:
       ascii_mode: true
     com.xunyong.hapigo: # hapigo
       ascii_mode: true
+      ascii_punct: true
     com.microsoft.VSCode: # Visual Studio Code
       ascii_mode: true # 开启中文输入
       # ascii_punct: true         # 半角符号即中文状态输入英文标点
@@ -517,4 +518,3 @@ patch:
     com.memoryvault.MemoryVault:
       ascii_mode: true
       no_inline: true
-
