--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -875,7 +875,7 @@ close_on_child_death yes
 #: ask before opening the link.
 
 # term xterm-kitty
-term xterm
+term xterm-256color
 
 #: The value of the TERM environment variable to set. Changing this
 #: can break many terminal programs, only change it if you know what
@@ -1361,6 +1361,6 @@ map cmd+enter    toggle_fullscreen
 
 
 # BEGIN_KITTY_THEME
-# Dracula
+# Ayu
 include current-theme.conf
 # END_KITTY_THEME
