--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -18,10 +18,15 @@ include ./kitty-themes/mocha.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Fira Code Medium
-bold_font        Fira Code Bold
-italic_font      Fira Code Italic
-bold_italic_font Fira Code Bold Italic
+# font_family      Fira Code Medium
+# bold_font        Fira Code Bold
+# italic_font      Fira Code Italic
+# bold_italic_font Fira Code Bold Italic
+
+font_family      CaskaydiaCove NF
+bold_font        CaskaydiaCove NF Bold
+italic_font      CaskaydiaCove NF Italic
+bold_italic_font CaskaydiaCove NF Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -70,8 +75,9 @@ adjust_column_width 100%
 #: artifacts).
 
 # symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
-symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 FiraCode NF
-symbol_map U+4E00-U+9FEF Smartisan Compact CNS
+symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 CaskaydiaCove NF
+# symbol_map U+4E00-U+9FEF Smartisan Compact CNS
+symbol_map U+4E00-U+9FEF LXGW WenKai Screen
 
 #: Map the specified unicode codepoints to a particular font. Useful
 #: if you need special rendering for some symbols, such as for
@@ -781,6 +787,8 @@ confirm_os_window_close 0
 #: --login to ensure that the shell starts in interactive mode and
 #: reads its startup rc files.
 
+shell_integration disabled
+
 # editor .
 
 #: The console editor to use when editing the kitty config file or
@@ -1361,6 +1369,6 @@ map cmd+enter    toggle_fullscreen
 
 
 # BEGIN_KITTY_THEME
-# Ayu
+# Gruvbox Dark Hard
 include current-theme.conf
 # END_KITTY_THEME
