--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -18,15 +18,15 @@ include ./kitty-themes/mocha.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      Fira Code Medium
-# bold_font        Fira Code Bold
-# italic_font      Fira Code Italic
-# bold_italic_font Fira Code Bold Italic
+font_family      Fira Code Medium
+bold_font        Fira Code Bold
+italic_font      Fira Code Italic
+bold_italic_font Fira Code Bold Italic
 
-font_family      CaskaydiaCove NF
-bold_font        CaskaydiaCove NF Bold
-italic_font      CaskaydiaCove NF Italic
-bold_italic_font CaskaydiaCove NF Bold Italic
+#font_family      CaskaydiaCove NF
+#bold_font        CaskaydiaCove NF Bold
+#italic_font      CaskaydiaCove NF Italic
+#bold_italic_font CaskaydiaCove NF Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -75,7 +75,7 @@ adjust_column_width 100%
 #: artifacts).
 
 # symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
-symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 CaskaydiaCove NF
+symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 FiraCode NF
 # symbol_map U+4E00-U+9FEF Smartisan Compact CNS
 symbol_map U+4E00-U+9FEF LXGW WenKai Screen
 
@@ -844,6 +844,7 @@ close_on_child_death yes
 #:     env MYVAR2=${MYVAR1}/${HOME}/b
 
 #: The value of MYVAR2 will be a/<path to home directory>/b.
+env TERM_PROGRAM=kitty
 
 # update_check_interval 24
 
